2008-06-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpitemtreeview.c (gimp_item_tree_view_name_edited):
	don't dereference a NULL GError.

2008-06-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainercombobox.[ch]: made the model column
	enum public and namespaced it.

	* app/widgets/gimpsettingsbox.c: use the enum value instead of a
	magic number.

	* app/widgets/gimpsettingseditor.c: add a separator between
	recently used settings and favorites.

2008-06-23  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimpfreeselecttool.c
	(gimp_free_select_tool_modifier_key): Make switching selection
	mode through modifier keys work again.

2008-06-22  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpsettingseditor.[ch]: skeleton of a widget to
	manage the list of saved settings for the image map tools. Does
	absolutely nothing yet apart from displaying the list of settings.

	* app/widgets/gimpsettingsbox.[ch]: add "Manage Settings" menu item
	and show a dialog containing the new widget.

2008-06-21  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimpfreeselecttool.c
	(gimp_free_select_tool_update_motion): When applying angle
	constraints on the first segment vertex, base on the last segment
	vertex rather than not applying any constraint at all.

2008-06-20  Martin Nordholts  <martinn@svn.gnome.org>

	Make angle constraints with the Free Select Tool by using Ctrl
	work also when moving vertices, not only when creating new ones.

	* app/tools/gimpfreeselecttool.c
	(gimp_free_select_tool_active_modifier_key): Implement.

	(gimp_free_select_tool_update_motion): Put motion logic here so we
	can apply it from both _motion and _active_modifier_key.

	(gimp_free_select_tool_modifier_key): Ignore key presses from
	another display.

2008-06-20  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimpfreeselecttool.c: Don't alloc/free